--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,10 @@ services:
       # Mount the local source code to enable hot-reloading
       - .:/app
 
+  redis:
+    ports:
+      - "6379:6379"
+
   celery_worker:
     build:
       context: .
